# Total-Serialism

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  analysisMatrix-test.cpp  analysisMatrix.cpp  analysisMatrix.hpp  appScore.sh  clearScores.sh  dockerbuild.sh  example_input.txt  fuzz.sh  fuzzTest.sh  icon.icns  input.txt  instruments.txt  main.py  mainWindow.py  matrix-private.hpp  matrix.hpp  run  run.sh  score.sh  serialismGenerator-test.cpp  serialismGenerator.cpp  serialismGenerator.hpp  setup.sh  totalSerialism.cpp  unitTests.sh  utils.py
inc/: FunctionWrapper.hpp  analysisMatrix.hpp  brass.hpp  cello.hpp  fuzzTest.hpp  instrument.hpp  instrumentDefinitions.hpp  instrumentFactory.hpp  joinThreads.hpp  matrix.hpp  multiClef.hpp  note.hpp  piano.hpp  pianoharp.hpp  serialismGenerator.hpp  singleClef.hpp  strings.hpp  threadPool.hpp  threadsafeQueue-private.hpp  threadsafeQueue.hpp  timeSignature.hpp  woodwinds.hpp
src/: analysisMatrix-test.cpp  analysisMatrix.cpp  brass.cpp  cello.cpp  consts.py  fuzzEval.cpp  fuzzTest.cpp  instrument.cpp  instrumentDefinitions.cpp  instrumentFactory.cpp  joinThreads.cpp  main.py  mainWindow.py  matrix-private.hpp  multiClef.cpp  note-test.cpp  note.cpp  piano.cpp  pianoharp.cpp  score.sh  serialismGenerator-test.cpp  serialismGenerator.cpp  singleClef.cpp  strings.cpp  threadPool.cpp  timeSignature-test.cpp  timeSignature.cpp  totalSerialism.cpp  utils.py  woodwinds.cpp
tests/: CMakeLists.txt  analysisMatrix-test.cpp  note-test.cpp  timeSignature-test.cpp
